<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/filter_by_genre"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Spinner
            android:id="@+id/spinnerFilterByGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="@color/purple_200"/>


        <CheckBox
            android:id="@+id/checkBox_filter_by_availability"
            android:text="@string/filter_by_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/linearLayout_filter_by_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"/>

            <DatePicker
                android:id="@+id/datePicker_filter_by_availability_startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"/>

            <DatePicker
                android:id="@+id/datePicker_filter_by_availability_endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/button_filter_event_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_reset"/>

            <Button
                android:id="@+id/button_filter_event_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginStart="16dp"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>