<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorControlActivated"
    android:backgroundTint="@color/teal_700">

    <ImageButton
        android:id="@+id/imageButtonEntrantProfilePhone"
        android:layout_width="49dp"
        android:layout_height="32dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/edit_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toEndOf="@+id/textViewEntrantProfilePhone"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonEntrantProfileEmail"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/editicon" />

    <ImageButton
        android:id="@+id/imageButtonEntrantProfileEmail"
        android:layout_width="49dp"
        android:layout_height="32dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/edit_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toEndOf="@+id/textViewEntrantProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonEntrantProfileName"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/editicon" />

    <TextView
        android:id="@+id/textViewEntrantProfilePhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_optional"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntrantProfileEmail"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/textViewEntrantProfileEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntrantProfileName"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/buttonEntrantProfileBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/back"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEntrantProfileSave"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEntrantProfileSave"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEntrantProfileBack"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrantLogOut"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/toggleButtonEntrantProfileNotification"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/belloff"
        android:clickable="true"
        android:focusable="true"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonEntrantViewHistory"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewEntrantProfileName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrantViewNotifications"
        app:layout_constraintVertical_bias="0.1" />

    <ToggleButton
        android:id="@+id/toggleButtonEntrantProfileLinkUnlinkDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_link_unlink_selector"
        android:backgroundTint="@color/red"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:textOff="@string/device_unlinked"
        android:textOn="@string/device_linked"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntrantProfilePhone"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/buttonEntrantProfileDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/delete_account"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonEntrantProfileLinkUnlinkDevice"
        app:layout_constraintVertical_bias="0.103" />

    <Button
        android:id="@+id/buttonEntrantViewHistory"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/view_history"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEntrantViewNotifications"
        app:layout_constraintEnd_toStartOf="@+id/toggleButtonEntrantProfileNotification"
        app:layout_constraintStart_toEndOf="@+id/buttonEntrantViewNotifications"
        app:layout_constraintTop_toTopOf="@+id/buttonEntrantViewNotifications"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonEntrantViewNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/view_notifications"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonEntrantViewHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonEntrantProfileName"
        android:layout_width="49dp"
        android:layout_height="32dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/edit_name"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toEndOf="@+id/textViewEntrantProfileName"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonEntrantProfileNotification"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/editicon" />

    <Button
        android:id="@+id/buttonEntrantLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrantViewHistory"
        app:layout_constraintVertical_bias="0.783" />

</androidx.constraintlayout.widget.ConstraintLayout>
